# sagd_new

./: .gitignore  CMakeLists.txt  README.md  attribute.cpp  attribute.h  const_values.h  cuda_simple.cu  energy.cpp  energy.h  filtration.cpp  filtration.h  integrator.cpp  integrator.h  main  main.cpp  mesh.cpp  mesh.h
doc/: equations.tex  equations.toc
