cmake_minimum_required(VERSION 2.8)
project (new_filtration)
set(SOURCE main.cpp filtration.cpp mesh.cpp attribute.cpp)
set(HEADERS attribute.h const_values.h mesh.h filtration.h)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ggdb -g3 -pg -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -Wall")
add_executable(main ${HEADERS} ${SOURCE})